tests/invalid/typeclass_test_8.err_exp
typeclass_test_8.m:009: In predicate `main'/2:
typeclass_test_8.m:009:   type error: unsatisfied typeclass constraint:
typeclass_test_8.m:009:     [38;5;203m`typeclass_test_8.fooable(T)'[39;49m
typeclass_test_8.m:009:   The constraint is due to:
typeclass_test_8.m:019:     the call to typeclass method predicate
typeclass_test_8.m:019:     `typeclass_test_8.foo'/1, and
typeclass_test_8.m:020:     the call to typeclass method predicate
typeclass_test_8.m:020:     `typeclass_test_8.bar'/1.
typeclass_test_8.m:009: In predicate `main'/2:
typeclass_test_8.m:009:   warning: unresolved polymorphism.
typeclass_test_8.m:009:   The variable with an unbound type was:
typeclass_test_8.m:009:     [38;5;203mX[39;49m
typeclass_test_8.m:009:   Its type will be implicitly set to the builtin type
typeclass_test_8.m:009:   `void'.
typeclass_test_8.m:009:   The body of the clause contains a call to a
typeclass_test_8.m:009:   polymorphic predicate, but I can't determine which
typeclass_test_8.m:009:   version should be called, because the type of the
typeclass_test_8.m:009:   variable listed above is not known. (I ought to tell
typeclass_test_8.m:009:   you which call caused the problem, but I am afraid
typeclass_test_8.m:009:   you will have to work it out yourself. My apologies.)
